<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20sp"

    tools:context=".LogProgressActivity"
    >

    <Button
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:paddingTop="20sp"
        android:paddingBottom="20sp"
        android:text="@string/placeholder_date"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/white"
        />
<!--    style="@style/Widget.AppCompat.Button.Borderless.Colored"-->



    <TableLayout
        android:id="@+id/tlSetsTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate">


        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate">

            <TextView
                android:id="@+id/tvExerciseHeading"
                android:layout_width="0dp"
                android:layout_column="0"
                android:layout_weight="3"
                android:paddingVertical="10dp"
                android:textSize="17sp"
                android:text="@string/exercise"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/heading_border"/>

            <TextView
                android:id="@+id/tvWeightHeading"
                android:layout_width="0dp"
                android:layout_column="1"
                android:layout_weight="1"
                android:textSize="17sp"
                android:paddingVertical="10dp"
                android:text="@string/weight"
                android:textAlignment="center"
                android:background="@drawable/heading_border"                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvRepsHeading"
                android:layout_width="0dp"
                android:layout_column="2"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:textSize="17sp"
                android:text="@string/reps"
                android:textAlignment="center"
                android:background="@drawable/heading_border"                android:textColor="@color/white"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/tvPlaceholder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="3"
                android:layout_weight="0.5"
                android:paddingVertical="10dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:background="@drawable/heading_border"                app:srcCompat="@android:drawable/ic_menu_delete"
                />

        </TableRow>

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSetItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlSetsTable"
        app:layout_constraintHeight_max="500dp"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvSetItems" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvSetItems" />

</androidx.constraintlayout.widget.ConstraintLayout>