<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/exercise"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spinExercise"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/btnAddToExercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExercise" />


    <Button
        android:id="@+id/btnAddToExercise"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="+"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/tvWeight"
        app:layout_constraintEnd_toStartOf="@+id/btnRemoveFromExercise"
        app:layout_constraintTop_toBottomOf="@+id/tvExercise"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRemoveFromExercise"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:text="-"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tvWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExercise"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50sp"
        android:paddingBottom="20dp"
        android:text="@string/weight"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinExercise" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeight"
        android:inputType="number"/>

    <TextView
        android:id="@+id/tvReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50sp"
        android:paddingBottom="20dp"
        android:text="@string/reps"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWeight" />

    <EditText
        android:id="@+id/etReps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reps"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReps"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnAdd2"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReps" />


</androidx.constraintlayout.widget.ConstraintLayout>