<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <TableLayout
        android:id="@+id/tlSetsTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tlSetTableLayout">

            <TextView
                android:id="@+id/tvExercise"
                android:layout_width="0dp"
                android:layout_column="0"
                android:layout_weight="3"
                android:paddingVertical="10dp"
                android:textSize="18sp"
                android:text="@string/exercise"
                android:textAlignment="center"
                android:background="@drawable/border"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="0dp"
                android:layout_column="1"
                android:layout_weight="1"
                android:textSize="18sp"
                android:paddingVertical="10dp"
                android:text="@string/weight"
                android:textAlignment="center"
                android:background="@drawable/border"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/tvReps"
                android:layout_width="0dp"
                android:layout_column="2"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:textSize="18sp"
                android:text="@string/reps"
                android:textAlignment="center"
                android:background="@drawable/border"
                android:textColor="@color/black"
                />

            <ImageButton
                android:id="@+id/ibDelete"
                android:layout_width="0dp"
                android:layout_column="3"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:paddingVertical="10dp"
                android:textAlignment="center"
                app:srcCompat="@android:drawable/ic_menu_delete"
                android:background="@drawable/border"
                />



        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>